--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,10 @@ body {
     padding:4%;
 }
 
+.venue-list h2 {
+    color:#68912b;
+}
+
 .venue-list img {
     height:40%;
     width:80%;
@@ -78,7 +82,6 @@ nav a {
 /* Foooter */
 
 footer {
-    background-color: white;
     color:#68912b;
     text-align: center;
     margin-top:5%;
@@ -251,4 +254,23 @@ footer {
 .error {
     font-family: Helvetica;
     color: red;
+}
+
+.select-venue {
+    color:#68912b;
+    margin-bottom:1%;
+}
+
+.select-venue select {
+    font-family: 'Sofia Pro';
+}
+
+.venue-list button {
+    font-family: 'Sofia Pro';
+    background-color: #314c88;
+    color:white;
+    cursor: pointer;
+    border:none;
+    border-radius:5px;
+    transform: translateY(-6%)
 }
